--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
   
   
   <properties>
-		<junit.version>4.10</junit.version>
-		<org.springframework.version>3.2.5.RELEASE</org.springframework.version>
+		<junit.version>4.11</junit.version>
+		<org.springframework.version>3.2.3.RELEASE</org.springframework.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<jackson.mapper.version>1.9.4</jackson.mapper.version>	
 		<org.springframework.data.version>1.5.1.RELEASE</org.springframework.data.version>
@@ -94,6 +94,19 @@
 			<version>${de.flapdoodle.embed.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 			
+		
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.2</version>
+		</dependency>
+		
 	</dependencies>
 </project>
